navbar collapse z-index fix

--- a/css/all.css
+++ b/css/all.css
@@ -364,6 +364,7 @@ h3 {
 		position: absolute;
 		top: 75px;
 		right: 10px;
+		z-index: 2;
 	}
 
 	#navbar-collapse.collapse li {
